[package]
authors = ["Daniel Olano <daniel@olanod.com>"]
edition = '2018'
name = "vln-human-swap"
version = "0.1.0"
license = "Unlicense"
homepage = "https://github.com/valibre-org/vln-node/"
repository = "https://github.com/valibre-org/vln-node/"
description = "A pallet for swapping on-chain with off-chain assets"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, version = '3.0.0' }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, version = '3.0.0' }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, version = '3.0.0' }
orml-traits = { git = "https://github.com/valibre-org/open-runtime-module-library", default-features = false }
vln-primitives = { version = "0.1.0", path = "../../primitives" }

[dev-dependencies]
serde = { version = "1.0.101" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, version = '3.0.0' }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'vln-primitives/std',
	'orml-traits/std',
	'sp-runtime/std',
]
