[package]
authors = ['Daniel Olano <daniel@olanod.com>']
description = 'Mediums Ledger module'
edition = '2018'
homepage = 'https://github.com/valibre-org/node'
license = 'Unlicense'
name = 'pallet-provider'
readme = 'README.md'
repository = 'https://github.com/valibre-org/node'
version = '0.1.0'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
std = [
    'frame-support/std',
    'frame-system/std',
    'orml-traits/std',
    'pallet-membership/std',
    'parity-scale-codec/std',
    'sp-std/std',
]

[dependencies]
frame-support = { version = '2.0.0', default-features = false }
frame-system = { version = '2.0.0', default-features = false }
sp-std = { version = '2.0.0', default-features = false }
orml-traits = { version = '0.3.1', default-features = false }
pallet-membership = { version = '2.0.0', default-features = false }

parity-scale-codec = { features = ['derive'], version = '1.0', default-features = false }

[dev-dependencies]
sp-core = { version = '2.0.0', default-features = false }
sp-io = { version = '2.0.0', default-features = false }
sp-runtime = { version = '2.0.0', default-features = false }
orml-tokens = '0.3.1'

