[package]
authors = ['Daniel Olano <daniel@olanod.com>']
description = 'Mediums Ledger module'
edition = '2018'
homepage = 'https://github.com/valibre-org/node'
license = 'Unlicense'
name = 'pallet-provider'
readme = 'README.md'
repository = 'https://github.com/valibre-org/node'
version = '0.1.0'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
std = [
    'arrayvec/std',
    'frame-support/std',
    'frame-system/std',
    'lite-json/std',
    'orml-traits/std',
    'pallet-membership/std',
    'parity-scale-codec/std',
    'sp-application-crypto/std',
    'sp-arithmetic/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'valiu-node-commons/std',
]

[dependencies]
arrayvec = { default-features = false, version = '0.5' }
frame-support = { default-features = false, version = '2.0' }
frame-system = { default-features = false, version = '2.0'  }
lite-json = { default-features = false, version = '0.1' }
orml-traits = { default-features = false, version = '0.3' }
pallet-membership = { default-features = false, version = '2.0' }
parity-scale-codec = { default-features = false, features = ['derive'], version = '1.0' }
sp-application-crypto = { default-features = false, version = '2.0' }
sp-arithmetic = { default-features = false, version = '2.0' }
sp-core = { default-features = false, version = '2.0' }
sp-io = { default-features = false, version = '2.0' }
sp-runtime = { default-features = false, version = '2.0' }
valiu-node-commons = { default-features = false, path = '../../valiu-node-commons' }

[dev-dependencies]
orml-tokens = { default-features = false, version = '0.3' }