[package]
authors = ['Daniel Olano <daniel@olanod.com>']
description = 'Mediums Ledger module'
edition = '2018'
homepage = 'https://github.com/valibre-org/node'
license = 'Unlicense'
name = 'pallet-vln-liquidity'
readme = 'README.md'
repository = 'https://github.com/valibre-org/node'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
native-runtime-benchmarks = ['frame-benchmarking/std', 'runtime-benchmarks', 'std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-system/runtime-benchmarks',
    'orml-tokens',
    'sp-std',
]
std = [
    'arrayvec/std',
    'frame-support/std',
    'frame-system/std',
    'orml-traits/std',
    'pallet-membership/std',
    'parity-scale-codec/std',
    'sp-application-crypto/std',
    'sp-arithmetic/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'vln-commons/std',
]

[dependencies]
arrayvec = { default-features = false, version = "0.5.2" }
frame-benchmarking = { default-features = false, optional = true, version = "3.0.0" }
frame-support = { default-features = false, version = "3.0.0" }
frame-system = { default-features = false, version = "3.0.0" }
orml-tokens = { default-features = false, optional = true, version = "0.4.0" }
orml-traits = { default-features = false, version = "0.4.0" }
pallet-membership = { default-features = false, version = "3.0.0" }
parity-scale-codec = { default-features = false, features = ['derive'], version = "2.0.0" }
sp-application-crypto = { default-features = false, version = "3.0.0" }
sp-arithmetic = { default-features = false, version = "3.0.0" }
sp-core = { default-features = false, version = "3.0.0" }
sp-io = { default-features = false, version = "3.0.0" }
sp-runtime = { default-features = false, version = "3.0.0" }
sp-std = { default-features = false, optional = true, version = "3.0.0" }
vln-commons = { default-features = false, path = '../../commons' }

[dev-dependencies]
once_cell = { default-features = false, features = ['std'], version = "1.5.2" }
orml-tokens = { default-features = false, version = "0.4.0" }
parking_lot = { default-features = false, version = "0.11.1" }
