[package]
authors = ["Stanly Johnson <stanlyjohnson@outlook.com>"]
edition = '2021'
name = "virto-payment"
version = "0.3.0"
license = "Unlicense"
homepage = "https://github.com/virto-network/virto-node"
repository = "https://github.com/virto-network/virto-node"
description = "Allows users to post payment on-chain"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false, optional = true }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.12", default-features = false }
virto-primitives = { version = "0.3.0", path = "../../primitives" }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }

[dev-dependencies]
serde = { version = "1.0.101" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.12", default-features = false }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'sp-runtime/std',
	'scale-info/std',
	'orml-traits/std',
	'frame-benchmarking/std',
]
runtime-benchmarks = ["frame-benchmarking"]
