[package]
name = "pallet-payments"
version = "0.1.0"
authors = ['Virto Team <contact@virto.team>']
license = "GPL-3.0-only"
homepage = 'https://github.com/virto-network/virto-node'
repository = 'https://github.com/virto-network/virto-node'
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = [ "derive" ] }
scale-info = { workspace = true }
sp-runtime = { git = "https://github.com/virto-network/polkadot-sdk", default-features = false, branch = "virto-crates-io-v1.2.0" }
sp-std = { git = "https://github.com/virto-network/polkadot-sdk", default-features = false, branch = "virto-crates-io-v1.2.0" }
sp-core = { git = "https://github.com/virto-network/polkadot-sdk", default-features = false, branch = "virto-crates-io-v1.2.0" }
sp-io = { git = "https://github.com/virto-network/polkadot-sdk", default-features = false, branch = "virto-crates-io-v1.2.0" }
frame-benchmarking = { git = "https://github.com/virto-network/polkadot-sdk", default-features = false, branch = "virto-crates-io-v1.2.0" }
frame-support = { git = "https://github.com/virto-network/polkadot-sdk", default-features = false, branch = "virto-crates-io-v1.2.0" }
frame-system = { git = "https://github.com/virto-network/polkadot-sdk", default-features = false, branch = "virto-crates-io-v1.2.0" }
pallet-preimage= { git = "https://github.com/virto-network/polkadot-sdk", default-features = false, branch = "virto-crates-io-v1.2.0" }
pallet-scheduler= { git = "https://github.com/virto-network/polkadot-sdk", default-features = false, branch = "virto-crates-io-v1.2.0" }




[dev-dependencies]
serde = { version = "1.0.132" }
pallet-balances = { git = "https://github.com/virto-network/polkadot-sdk", default-features = false, branch = "virto-crates-io-v1.2.0" }
pallet-sudo = { git = "https://github.com/virto-network/polkadot-sdk", default-features = false, branch = "virto-crates-io-v1.2.0" }
pallet-assets = { git = "https://github.com/virto-network/polkadot-sdk", default-features = false, branch = "virto-crates-io-v1.2.0" }
sp-keystore = { git = "https://github.com/virto-network/polkadot-sdk", default-features = false, branch = "virto-crates-io-v1.2.0" }



[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"pallet-balances/std",
	"pallet-sudo/std",
	"pallet-assets/std",
	"pallet-preimage/std",
	"pallet-scheduler/std",
	"sp-std/std",
	"sp-io/std",
]
try-runtime = [ "frame-support/try-runtime" ]
