[package]
	name = "pallet-payments"
	version = "0.1.0"
	authors = ['Virto Team <contact@virto.team>']
	license = "GPL-3.0-only"
	homepage = 'https://github.com/virto-network/virto-node'
	repository = 'https://github.com/virto-network/virto-node'
	edition = "2021"

	[package.metadata.docs.rs]
		targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
	parity-scale-codec = { workspace = true, features = ["derive"] }
	scale-info = { workspace = true }
	sp-runtime = { workspace = true }
	sp-std = { workspace = true }
	sp-core = { workspace = true }
	sp-io = { workspace = true }
	frame-support = { workspace = true }
	frame-system = { workspace = true }
	frame-benchmarking = { workspace = true, optional = true }
	log = { workspace = true }

[dev-dependencies]
	serde = { workspace = true }
	pallet-balances = { workspace = true }
	pallet-sudo = { workspace = true }
	pallet-assets = { workspace = true }
	sp-keystore = { workspace = true }
	pallet-preimage = { workspace = true }
	pallet-scheduler = { workspace = true }


[features]
	default = ["std"]
	runtime-benchmarks = [
		"frame-benchmarking/runtime-benchmarks",
		"frame-support/runtime-benchmarks",
		"frame-system/runtime-benchmarks",
		"pallet-assets/runtime-benchmarks",
		"pallet-balances/runtime-benchmarks",
		"pallet-sudo/runtime-benchmarks",
		"pallet-preimage/runtime-benchmarks",
		"pallet-scheduler/runtime-benchmarks",
		"sp-runtime/runtime-benchmarks",
	]
	std = [
		"frame-benchmarking/std",
		"frame-support/std",
		"frame-system/std",
		"log/std",
		"pallet-assets/std",
		"pallet-balances/std",
		"pallet-sudo/std",
		"pallet-preimage/std",
		"pallet-scheduler/std",
		"parity-scale-codec/std",
		"scale-info/std",
		"serde/std",
		"sp-core/std",
		"sp-io/std",
		"sp-keystore/std",
		"sp-runtime/std",
		"sp-std/std",
	]
	try-runtime = [
		"frame-support/try-runtime",
		"frame-system/try-runtime",
		"pallet-assets/try-runtime",
		"pallet-balances/try-runtime",
		"pallet-preimage/try-runtime",
		"pallet-scheduler/try-runtime",
		"pallet-sudo/try-runtime",
		"sp-runtime/try-runtime",
	]
